# MechaTree

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  publish-testpypi.yml  wheels.yml
archive/: README.md
archive/CommentedLibrary_and_Doc/Doc/: conf.py  getstart.rst  index.html  make.bat  userguide.rst
archive/CommentedLibrary_and_Doc/Lib&Modules/: pytree.pyx  self_avoiding.py  self_avoiding_modules.py  setup_lib.py  tree.h
archive/CommentedLibrary_and_Doc/MakefileTest/: Makefile
archive/CommentedLibrary_and_Doc/MakefileTest/Mod/dist_mod/: Makefile  mod_dist.c  setup.py
archive/PyTreeLib/: Readme  random_growth.py  sap_transport.py  self_avoiding_modules.py
archive/PyTreeLib/Mod/3Dplot_mod/: Makefile  mod_3Dplot.c  mod_3Dplot.pyx  setup.py
archive/PyTreeLib/Mod/dist_mod/: Makefile  mod_dist.c  setup.py
archive/PyTreeLib/Mod/plot_mod/: Makefile  mod_plot.c  setup.py
benchmarks/: README.md  baseline.md  bench_branch_merge.py  bench_create.py  bench_evolution.py  bench_forest_scale.py  bench_light.py  bench_memory.py  bench_momentum_wind.py  bench_momentum_wind_at_scale.py  bench_remove.py  bench_simulation.py  bench_topology.py  bench_wind_fixed_point.py
data/: S3_champions.json
docs/: Makefile  about.rst  conf.py  custom.rst  design.rst  dvpguide.rst  getstart.rst  index.rst  momentum_wind_derivation.md  roadmap_history.md  userguide.rst
docs/api/: index.rst  mechatree.rst
examples/: custom_simulation.py  dendroflow_wind.py  dendroflow_wind.yaml  evolve_a_forest.py  figstyle_compare.py  forest.yaml  grow_a_forest.py  grow_one_tree.py  momentum_wind.yaml  plot_allocation.py  plot_self_thinning.py  plot_strahler.py  random_growth.py  render_blender.py  sap_transport.py  self_avoiding.py  sympy_genome.py  sympy_genome.yaml  tournament_natcomm.yaml
legacy/: README.md
legacy/fortran/: EvoluAlgo.f90  Evolution.ini  Forest.f90  Forest.ini  mod_tree.f90
legacy/matlab/: ART_Allometry_simplified.m  Fractal_dim.m  neural_branch.m  neural_reserve.m  plotForest2D.m  plot_allocation_vs_t.m  plot_area_preservation_1tree.m  plot_single_tree_3D.m  plot_single_tree_3D_flat.m  plot_stat_single_tree.m  self_thinning.m  strategies_Forest.m  strategies_single_tree.m
legacy/pytree/Doc/: Makefile  about.rst  configfile  custom.html  custom.rst  dvpguide.rst  index.rst
legacy/pytree/Lib&Modules/: cytree.pxd  mod_plot.pyx
legacy/pytree/MakefileTest/: self_avoiding_modules.py
legacy_fortran/: Makefile  README.md  mod_evolu.f90  mod_tools.f90  precis_mod.f90  stat.f90  tree.f90
notebooks/: 01_grow_one_tree.ipynb  02_forest_under_wind.ipynb  03_neural_genome.ipynb  04_custom_growth_law.ipynb  05_strahler_diagnostics.ipynb  06_fractal_dimension.ipynb  07_wind_models.ipynb  README.md
scripts/: run_tournament.py  strategies_single_tree.py  validate_tournament.py
src/mechatree/: __init__.py  config.py  forest.py  genome.py  growth.py  mechanics.py  pruning.py  simulate.py  stats.py  sympy_genome.py
src/mechatree/_core/: __init__.py  _core.pyx  branch.cpp  branch.h  cytree.pxd  genome.h  growth.cpp  growth.h  light.cpp  light.h  mechanics.cpp  mechanics.h  momentum.cpp  momentum.h  pruning.cpp  pruning.h  tree.cpp  tree.h
src/mechatree/evolution/: __init__.py  archive.py  curate.py  genome.py  run.py
src/mechatree/export/: __init__.py  blender.py
src/mechatree/geometry/: __init__.py  distance.py
src/mechatree/light/: __init__.py  interception.py  leaves.py  sun.py
src/mechatree/plotting/: _2d.py  _3d.py  __init__.py  _mechanics.py  _palette.py  _stats.py  _storm.py  figstyle.py
src/mechatree/wind/: __init__.py  _momentum_wind_kernel.py  bulk_thinning.py  dendroflow.py  distributions.py  momentum_wind.py  replay.py
tests/: conftest.py  test_branch_merge.py  test_config.py  test_distance.py  test_evolution_curate.py  test_evolution_forest.py  test_evolution_genome.py  test_evolution_resume.py  test_examples.py  test_export_blender.py  test_figstyle.py  test_forest.py  test_genome_neural.py  test_growth.py  test_light.py  test_mechanics.py  test_plotting.py  test_pruning.py  test_public_api.py  test_pytree_api.py  test_pytree_classification.py  test_pytree_fields.py  test_pytree_memory.py  test_pytree_remove.py  test_pytree_topology.py  test_simulate.py  test_smoke.py  test_stats.py  test_step9_integration.py  test_sympy_genome.py  test_wind_bulk_thinning.py  test_wind_dendroflow.py  test_wind_distributions.py  test_wind_fixed_point.py  test_wind_momentum.py  test_wind_replay.py
(+5 files in other folders)
