[build-system]
requires = ["setuptools>=68", "wheel", "Cython>=3.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mechatree"
version = "0.0.0.dev0"
description = "Mechanical simulation of tree growth in response to wind and light."
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
authors = [
    { name = "Christophe Eloy", email = "christopheloy@gmail.com" },
]
keywords = ["tree", "biomechanics", "growth", "simulation", "allometry", "wind"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.26",
    "plotly>=5.20",
    "kaleido>=1.0",        # plotly.write_image static PNG/SVG export
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "pre-commit>=3.7",
]
docs = [
    "sphinx>=7",
    "furo>=2024.1",
    "sphinx-copybutton>=0.5",
]
notebooks = [
    "jupyter>=1.0",
    "ipykernel>=6.29",
    "nbstripout>=0.7",
]

[project.urls]
Homepage = "https://github.com/celoy/MechaTree"
Paper = "https://doi.org/10.1038/s41467-017-00995-6"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mechatree = ["py.typed"]
"mechatree._core" = ["*.pxd", "*.pyx", "*.h"]

# Cython/C++ extension modules are declared in setup.py (cythonize requires a
# real Python entry point, not TOML). See setup.py at the repo root.

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["archive", "legacy_fortran"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: large-tree or long-running tests (opt in with `-m slow`)",
]

[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-*"
skip = "pp* *-musllinux_* *_i686 *-win32"
test-requires = ["pytest"]
test-command = "pytest {project}/tests -m \"not slow\""
build-verbosity = 1

[tool.cibuildwheel.linux]
archs = ["x86_64"]
